--- a/Normal_Forms_Builder/App.xaml
+++ b/Normal_Forms_Builder/App.xaml
@@ -1,9 +1,9 @@
-﻿<Application x:Class="MLTA_1_1.App"
+﻿<Application x:Class="Normal_Forms_Builder.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:MLTA_1_1"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              StartupUri="MainWindow.xaml">
+
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -12,4 +12,5 @@
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
+
 </Application>
