--- a/Normal_Forms_Builder/result.xaml
+++ b/Normal_Forms_Builder/result.xaml
@@ -1,18 +1,18 @@
-﻿<Page x:Class="MLTA_1_1.Result"
+﻿<Page x:Class="Normal_Forms_Builder.Result"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-      xmlns:local="clr-namespace:MLTA_1_1"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="result">
+
     <Grid>
         <Border Padding="10,10,10,10">
             <ScrollViewer Background="#FF003238" Foreground="#FF004048">
                 <DockPanel LastChildFill="True">
                     <Label DockPanel.Dock="Top" Margin="5,5,5,0" Background="#FF00262B" Content="РЕЗУЛЬТАТ" HorizontalContentAlignment="Center" Width="auto" FontSize="20" VerticalAlignment="Center" Foreground="#DDD2D2D2"/>
+                    
                     <Label DockPanel.Dock="Top" Margin="0,5,0,5" Content="СДНФ" HorizontalContentAlignment="Center" Width="auto" FontSize="18" VerticalAlignment="Center" Foreground="#DDD2D2D2">
                         <Label.Background>
                             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -29,7 +29,9 @@
                             </LinearGradientBrush>
                         </Label.Background>
                     </Label>
+                    
                     <Label DockPanel.Dock="Top" x:Name="labelPDNF"/>
+                    
                     <Label DockPanel.Dock="Top" Margin="0,5,0,5" Content="СКНФ" HorizontalContentAlignment="Center" Width="auto" FontSize="18" VerticalAlignment="Center" Foreground="#DDD2D2D2">
                         <Label.Background>
                             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -46,7 +48,9 @@
                             </LinearGradientBrush>
                         </Label.Background>
                     </Label>
+                    
                     <Label DockPanel.Dock="Top" x:Name="labelPCNF"/>
+                    
                     <Label DockPanel.Dock="Top" Margin="0,5,0,5" Content="ПНФ" HorizontalContentAlignment="Center" Width="auto" FontSize="18" VerticalAlignment="Center" Foreground="#DDD2D2D2">
                         <Label.Background>
                             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -63,7 +67,9 @@
                             </LinearGradientBrush>
                         </Label.Background>
                     </Label>
+                    
                     <Label DockPanel.Dock="Top" x:Name="labelPNF"/>
+                    
                     <Label DockPanel.Dock="Top" Margin="0,5,0,5" Content="Наим. кол-во операций" HorizontalContentAlignment="Center" Width="auto" FontSize="18" VerticalAlignment="Center" Foreground="#DDD2D2D2">
                         <Label.Background>
                             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -80,9 +86,11 @@
                             </LinearGradientBrush>
                         </Label.Background>
                     </Label>
+                    
                     <Label DockPanel.Dock="Top" x:Name="labelLeastCount"/>
                 </DockPanel>
             </ScrollViewer>
         </Border>
     </Grid>
+    
 </Page>
